@@ -1,6 +1,6 @@
 # General defines
 
-version := 1.5.3
+version := 1.5.3pre
 
 
 # ownership (used by 'make install')
@@ -68,13 +68,15 @@ icu := no
 
 # paths
 
-instdir   := /usr
+globalconfdir := /etc
+#globalconfdir := /usr/local/etc
+instdir       := /usr
 
-bindir    := ${instdir}/bin
-libdir    := ${instdir}/lib
-hdir      := ${instdir}/include/sword
-docdir    := ${instdir}/doc/sword
-confdir   := ${instdir}/share/sword
+bindir        := ${instdir}/bin
+libdir        := ${instdir}/lib
+hdir          := ${instdir}/include/sword
+docdir        := ${instdir}/doc/sword
+confdir       := ${instdir}/share/sword
 
 
 
